--- a/inner.html
+++ b/inner.html
@@ -46,19 +46,19 @@
         <h2 class="sorting-type">сортировка:</h2>
         <ul class="sorting-items">
           <li class="current"><a href="#">по цене</a></li>
-          <li class="current"><a href="#"> по типу</a> </li>
-            <li class="current"><a href="a">по рейтингу</a></li>  
+          <li><a href="#"> по типу</a> </li>
+            <li><a href="a">по рейтингу</a></li>  
         </ul>    
       </div>
       <ul class="triangle">
-      <li>&#9651</li>
-      <li>&#9660</li>    
+          <li><a href="a">&#9651;</a></li>
+          <li><a href="">&#9660;</a></li>    
       </ul>    
      
       <section class="hotel-results">
       <ul>
           <li class="hotel">
-              <span class="hotel-name">amara resort &amp spa</span>
+              <span class="hotel-name">amara resort &amp; spa</span>
               <img src="http://placehold.it/150x100" alt="amara">
               <div class="hotel-description">гостиница</div>
               <div class="hotel-description">  от 3500 р.</div>
