Добавила картинки и стили

--- a/inner.html
+++ b/inner.html
@@ -12,7 +12,7 @@
         <ul>
           <li> <a href="#">Информация</a></li>
           <li> <a href="#">Фото и видео</a></li>
-            <img src="http://placehold.it/150x100" alt="City of Sedona">
+            <img src="img/logo.png" alt="City of Sedona">
           <li><a href="#">Карта штата</a></li>
           <li><a href="#">Гостиницы</a></li>
         </ul>
@@ -59,7 +59,7 @@
       <ul>
           <li class="hotel">
               <span class="hotel-name">amara resort &amp; spa</span>
-              <img src="http://placehold.it/150x100" alt="amara">
+              <img src="img/amara.png" alt="amara">
               <div class="hotel-description">гостиница</div>
               <div class="hotel-description">  от 3500 р.</div>
                <a href="#" type="btn">подробнее</a>
@@ -70,7 +70,7 @@
           </li>
           <li class="hotel">
               <span class="hotel-name">desert quail inn</span>
-              <img src="http://placehold.it/150x100" alt="desert">
+              <img src="img/desert.png" alt="desert">
              <div class="hotel-description">мотель</div>
               <div class="hotel-description">  от 2000 р.</div>                      
               <a href="#" type="btn">подробнее</a>
@@ -81,12 +81,12 @@
           </li>
           <li class="hotel">
               <span class="hotel-name">villas at poco diablo</span>
-              <img src="http://placehold.it/150x100" alt="villas">
+              <img src="img/villas.png" alt="villas">
              <div class="hotel-description">апартаменты</div>
               <div class="hotel-description">  от 4000 р.</div>            
               <a href="#" type="btn">подробнее</a>
               <a href="#" type="btn">забронировать</a>
-              <img src="http://placehold.it/150x100" alt="звездочки">
+              <img src="http://placehold.it/150x100" alt="звездочки"><!--звездочки надо тоже вырезать как картинку?-->
               <div class="hotel-rating">рейтинг</div>
               <div class="hotel-rating">9.2</div>
           </li>
@@ -108,7 +108,7 @@
         </section>
         <section class="footer-copyright">
           <span>website by</span>
-          <a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
+          <a class="btn" href="img/logohtml.png">HTML Academy</a>
         </section> 
     </footer>
       
