--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
           <li><a href="#">Карта штата</a></li>
           <li><a href="#">Гостиницы</a></li>
         </ul>
-        <a class="logo" href="img/logo.png"></a>  <!--почему не работает ссылка?-->           
+     <a href="#"><img class="logo" src="img/logo.png"></a>  <!--я тебя правильно поняла?-->           
       </nav>           
     </header>  
     <main class="content">        
         <h1  class="slogan">седона-небольшой городок в аризоне, <br>заслуживающий большего!</h1>        
         <h2 class="title"> рассмотрим 5 причин, по которым седона круче, чем гранд каньон </h2>
        <ol class="reasons">
-           <li class="illustrated">настоящий городок <!--Саша, какая-то была идея с иллюстрейтед, только я ее забыла(-->
+           <li class="illustrated illustrated-left">настоящий городок 
               <p>седона не аттракцион для туристов, там течет настоящая жизнь</p>
-              <img src="img/flowers.png" alt="Вид Седоны">
+              <img src="img/flowers.jpg" alt="Вид Седоны">
                 <ul>
-                    <li class="icon accommodation"><!-- тут надо прописывать картинки с едой, жильем и сувенирами?-->
+                    <li class="icon accommodation">
                         <h3>жилье</h3>
                         <p> рекомендуем пожить в настоящем мотеле, все как в кино</p>
                     </li>  
@@ -42,7 +42,7 @@
                 </ul>
            </li>   
         
-         <li class="illustrated">
+         <li class="illustrated illustrated-right">
             <h3>там есть<br>мост дьявола</h3>
             <p>да, по нему можно пройти!<br>если конечно вы осмелитесь</p>          
          </li>
@@ -88,7 +88,7 @@
         </section>
         <section class="footer-copyright">
           <span>website by</span>
-          <a class="btn" href="img/logohtml.png">HTML Academy</a>
+          <a class="btn" href="#"><img src="img/logohtml.png"></a>
         </section> 
      </footer>
   </body>
