--- a/inner.html
+++ b/inner.html
@@ -12,7 +12,7 @@
         <ul>
           <li> <a href="#">Информация</a></li>
           <li> <a href="#">Фото и видео</a></li>
-            <img src="img/logo.png" alt="City of Sedona">
+           <a href="#"><img class="logo" src="img/logo.png"></a>
           <li><a href="#">Карта штата</a></li>
           <li><a href="#">Гостиницы</a></li>
         </ul>
@@ -59,7 +59,7 @@
       <ul>
           <li class="hotel">
               <span class="hotel-name">amara resort &amp; spa</span>
-              <img src="img/amara.png" alt="amara">
+              <img src="img/amara.jpg" alt="amara">
               <div class="hotel-description">гостиница</div>
               <div class="hotel-description">  от 3500 р.</div>
                <a href="#" type="btn">подробнее</a>
@@ -70,7 +70,7 @@
           </li>
           <li class="hotel">
               <span class="hotel-name">desert quail inn</span>
-              <img src="img/desert.png" alt="desert">
+              <img src="img/desert.jpg" alt="desert">
              <div class="hotel-description">мотель</div>
               <div class="hotel-description">  от 2000 р.</div>                      
               <a href="#" type="btn">подробнее</a>
@@ -81,7 +81,7 @@
           </li>
           <li class="hotel">
               <span class="hotel-name">villas at poco diablo</span>
-              <img src="img/villas.png" alt="villas">
+              <img src="img/villas.jpg" alt="villas">
              <div class="hotel-description">апартаменты</div>
               <div class="hotel-description">  от 4000 р.</div>            
               <a href="#" type="btn">подробнее</a>
@@ -108,7 +108,7 @@
         </section>
         <section class="footer-copyright">
           <span>website by</span>
-          <a class="btn" href="img/logohtml.png">HTML Academy</a>
+         <a class="btn" href="#"><img src="img/logohtml.png"></a>
         </section> 
     </footer>
       
