--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <header class="main-header">
+    <header class="main-header clearfix">
       <nav class="main-navigation">
         <ul>
           <li> <a href="#">Информация</a></li>
@@ -16,17 +16,17 @@
           <li><a href="#">Карта штата</a></li>
           <li><a href="#">Гостиницы</a></li>
         </ul>
-     <a href="#"><img class="logo" src="img/logo.png"></a>  <!--я тебя правильно поняла?-->           
+     <a href="#" class="logo"><img  src="img/logo.png"></a>          
       </nav>           
     </header>  
     <main class="content">        
         <h1  class="slogan">седона-небольшой городок в аризоне, <br>заслуживающий большего!</h1>        
         <h2 class="title"> рассмотрим 5 причин, по которым седона круче, чем гранд каньон </h2>
-       <ol class="reasons">
-           <li class="illustrated illustrated-left">настоящий городок 
+       <ol class="reasons clearfix">
+           <li class="illustrated illustrated-left clearfix">настоящий городок 
               <p>седона не аттракцион для туристов, там течет настоящая жизнь</p>
-              <img src="img/flowers.jpg" alt="Вид Седоны">
-                <ul>
+              <img src="img/flowers.jpg" width="800" height="256" alt="Вид Седоны">
+                <ul class="">
                     <li class="icon accommodation">
                         <h3>жилье</h3>
                         <p> рекомендуем пожить в настоящем мотеле, все как в кино</p>
@@ -52,7 +52,7 @@
          </li>
          <li class="reason">
             <h3>красивая дорога</h3>
-            <p>ехать в сдону из лас-вегаса совсем не скучно!</p>
+            <p>ехать в седону из лас-вегаса совсем не скучно!</p>
          </li>
         <li class="reason">
             <h3>мало<br>туристов</h3>
