сделала разметку внутренней страницы
С размерами не разобралась вообще, какие где ставить при резиновой
сетке(

--- a/inner.html
+++ b/inner.html
@@ -18,7 +18,7 @@
         </ul>
        </nav>           
     </header>  
-      <form action="#">
+      <form action="#" class="clearfix">
       <fieldset class="hotel-description">
          <legend>инфраструктура:</legend>
            <input type="checkbox" id="pool" name="infrastructure"><label for="pool">бассейн</label><br>
@@ -95,8 +95,7 @@
       
       </section>
           
-      <footer class="main-footer">
-        <div class="container">
+      <footer class="main-footer clearfix">
         <section class="footer-contacts">
          #visitsedona
         </section>
