Поправила сетку главной страницы, добавила немного декоративных элементов

--- a/inner.html
+++ b/inner.html
@@ -5,9 +5,11 @@
     <meta charset="utf-8">
     <title>Седона внутренняя страница</title>
     <link rel="stylesheet" href="css/style.css">
+       <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Sans:700,400&subset=latin,cyrillic">
   </head>
   <body>
-    <header class="main-header">
+    <div class="container">
+      <header class="main-header">
       <nav class="main-navigation">
         <ul>
           <li> <a href="#">Информация</a></li>
@@ -110,7 +112,7 @@
          <a class="btn" href="#"><img src="img/logohtml.png"></a>
         </section> 
     </footer>
-      
+  </div>   
  </body>
 </html>
           
