--- a/inner.html
+++ b/inner.html
@@ -16,7 +16,7 @@
           <ul class="clearfix">
             <li><a href="#">Информация</a></li>
             <li><a href="#">Фото и видео</a></li>
-              <li class="logo"><a href="#"><img  src="img/logo2.png" alt="логотип" width="138" height="70"></a> </li>
+              <li class="logo"><a href="index.html"><img  src="img/logo2.png" alt="логотип" width="138" height="70"></a> </li>
             <li><a href="#">Карта штата</a></li>
             <li><a href="#">Гостиницы</a></li>
         </ul>
