--- a/inner.html
+++ b/inner.html
@@ -54,7 +54,7 @@
       </fieldset>          
      </form>         
       <div class="sorting clearfix">
-        <h3 class="sorting-results">найдено:3</h2>
+        <h2 class="sorting-results">найдено:3</h2>
         <h2 class="sorting-type">сортировка:</h2>
         <ul class="sorting-items">
           <li class="current"><a href="#">по цене</a></li>
@@ -86,8 +86,8 @@
               </div>  
               <div class="hotel_top">
                 <div class="hotel-rating">рейтинг:8,5</div>
-                <a href="#" type="btn" class="hotel-btn details">подробнее</a>
-                <a href="#" type="btn" class="hotel-btn book">забронировать</a>
+                <a href="#"  class="hotel-btn details">подробнее</a>
+                <a href="#" class="hotel-btn book">забронировать</a>
               </div>
           </li>
           <li class="hotel clearfix">
@@ -105,8 +105,8 @@
               </div>
               <div class="hotel-top">    
                 <div class="hotel-rating">рейтинг:8,9</div>                             
-                <a href="#" type="btn" class="hotel-btn details">подробнее</a>
-                <a href="#" type="btn" class="hotel-btn book">забронировать</a>
+                <a href="#"  class="hotel-btn details">подробнее</a>
+                <a href="#" class="hotel-btn book">забронировать</a>
               </div>
           </li>
           <li class="hotel clearfix">
@@ -125,8 +125,8 @@
               </div>
               <div class="hotel-top">
                 <div class="hotel-rating">рейтинг:9,2</div>
-                <a href="#" type="btn" class="hotel-btn details">подробнее</a>
-                <a href="#" type="btn" class="hotel-btn book">забронировать</a>
+                <a href="#"  class="hotel-btn details">подробнее</a>
+                <a href="#"  class="hotel-btn book">забронировать</a>
               </div>
           </li>
        </ul>
